site/docs/v0.4.0/en/installation.mdx
# Installation

A3S UI is published on npm. Install the stable package from the registry; GitHub installs remain useful only when testing unreleased source changes.

## Package installation

<Steps>
  <Step title="Install the package">

<CodeGroup>
```bash title="npm"
npm install @a3s-lab/ui@0.4.0
```

```bash title="pnpm"
pnpm add @a3s-lab/ui@0.4.0
```

```bash title="bun"
bun add @a3s-lab/ui@0.4.0
```

</CodeGroup>

  </Step>
  <Step title="Import Tailwind and A3S UI">

```css
@import "tailwindcss";
@import "@a3s-lab/ui";
```

The default export includes base tokens, every component, and the A3S style pack. Load it after Tailwind so a later preflight does not reset component boundaries or controls.

  </Step>
  <Step title="Load interactive components">

Most components are CSS-only. Import the complete runtime when the application uses menus, select, tabs, split panes, or other interactive composites.

```js
import "@a3s-lab/ui/all";
```

Or import the runtime once and only the controllers you use.

```js
import "@a3s-lab/ui/runtime";
import "@a3s-lab/ui/app-shell";
import "@a3s-lab/ui/tabs";
import "@a3s-lab/ui/split-pane";
import "@a3s-lab/ui/task-workspace";
```

  </Step>
  <Step title="Use semantic markup">

```html
<header class="workspace-header">
  <div data-workspace-identity>
    <h1>Production gateway</h1>
    <span>Configuration saved</span>
  </div>
  <div data-workspace-actions>
    <button type="button" class="btn">Deploy</button>
  </div>
</header>
```

  </Step>
</Steps>

## CSS imports

| Import                              | Contents                                                                          |
| ----------------------------------- | --------------------------------------------------------------------------------- |
| `@a3s-lab/ui`                       | Default complete A3S bundle                                                       |
| `@a3s-lab/ui/a3s`                   | Complete A3S bundle, explicit name                                                |
| `@a3s-lab/ui/{style}`               | Complete `vega`, `nova`, `maia`, `lyra`, `mira`, `luma`, `sera`, or `rhea` bundle |
| `@a3s-lab/ui/base`                  | Tokens, semantic utilities, and component structure without visual style          |
| `@a3s-lab/ui/components`            | All component structure without base or visual style                              |
| `@a3s-lab/ui/components/button.css` | One component's structure                                                         |
| `@a3s-lab/ui/styles/a3s.css`        | A3S visuals and foundations; combine with `base`                                  |
| `@a3s-lab/ui/compat`                | Optional legacy compatibility aliases                                             |

### Split imports

Use split imports when application CSS already owns its dependency graph.

```css
@import "tailwindcss";
@import "@a3s-lab/ui/base.css";
@import "@a3s-lab/ui/components/button.css";
@import "@a3s-lab/ui/components/app-shell.css";
@import "@a3s-lab/ui/styles/a3s.css";
```

## JavaScript imports

| Import                         | Controller                                                |
| ------------------------------ | --------------------------------------------------------- |
| `@a3s-lab/ui/all`              | Runtime and all auto-initialized controllers except Chart |
| `@a3s-lab/ui/runtime`          | Shared lifecycle and registry                             |
| `@a3s-lab/ui/accordion`        | Accordion enhancement                                     |
| `@a3s-lab/ui/app-shell`        | Desktop navigation and contained compact drawer           |
| `@a3s-lab/ui/bulk-action-bar`  | Selected-item scope, pending actions, and completion       |
| `@a3s-lab/ui/code-editor`      | Native Code Editor fallback                               |
| `@a3s-lab/ui/combobox`         | Combobox                                                  |
| `@a3s-lab/ui/command`          | Command palette                                           |
| `@a3s-lab/ui/context-menu`     | Pointer and keyboard Context Menu                         |
| `@a3s-lab/ui/data-grid`        | Data sorting and selection state                          |
| `@a3s-lab/ui/device-simulator` | Responsive iframe and native device-preview bridge        |
| `@a3s-lab/ui/drawer`           | Drawer                                                    |
| `@a3s-lab/ui/dropdown-menu`    | Dropdown Menu                                             |
| `@a3s-lab/ui/filter-bar`       | Segmented filters and active conditions                   |
| `@a3s-lab/ui/file-explorer`    | File selection, filtering, actions, and inline rename     |
| `@a3s-lab/ui/popover`          | Popover                                                   |
| `@a3s-lab/ui/range`            | Range input visual state                                  |
| `@a3s-lab/ui/select`           | Select                                                    |
| `@a3s-lab/ui/sidebar`          | Sidebar                                                   |
| `@a3s-lab/ui/split-pane`       | Resizable Split Pane                                      |
| `@a3s-lab/ui/tabs`             | Tabs and Ribbon navigation                                |
| `@a3s-lab/ui/task-workspace`   | Responsive task inspector and focus return                |
| `@a3s-lab/ui/toast`            | Toast                                                     |
| `@a3s-lab/ui/chart`            | Chart helper; Chart.js remains separate                   |

The public runtime namespace is `window.a3sUI`. It initializes registered components on page load and observes newly inserted DOM.

```js
window.a3sUI.initAll();
window.a3sUI.initAll({ force: true });
window.a3sUI.refresh(document.querySelector(".split-pane"));
```

## Dockview layout integration

Install the Dockview 8.1 MIT package and the host-framework adapter when an application needs a dockable workspace. This integration is separate from the 116 semantic components and does not enter the default CSS or JavaScript runtime.

```bash
npm install @a3s-lab/ui@0.4.0 dockview@8.1.0
npm install dockview-react@8.1.0 react react-dom # React
npm install dockview-vue@8.1.0 vue             # Vue
```

| Import | Contents |
| --- | --- |
| `@a3s-lab/ui/dockview` | Vanilla Dockview, Gridview, Splitview, and Paneview APIs, A3S theme, and layout persistence |
| `@a3s-lab/ui/dockview/react` | Complete React API plus `useDockviewLayout`, `useGridview`, `useSplitview`, and `usePaneview` |
| `@a3s-lab/ui/dockview/vue` | Complete Vue 3 API and matching composables |
| `@a3s-lab/ui/dockview/css` | Dockview base styles and A3S light/dark theme variables |

See [Dock Workspace](/harness/dock-workspace) for complete capability and licence boundaries.

## Server-rendered templates

Optional Nunjucks and Jinja templates ship with the package.

<CodeGroup>
```bash title="Nunjucks"
cp -R node_modules/@a3s-lab/ui/templates/nunjucks ./templates/a3s-ui
```

```bash title="Jinja"
cp -R node_modules/@a3s-lab/ui/templates/jinja ./templates/a3s-ui
```

</CodeGroup>

See [Templates](/templates) for macro parameters.

## Semantic and framework adapters

The package also ships a machine-readable component manifest, a small DOM annotation runtime, and optional React and Vue element adapters. These entrypoints preserve the same semantic HTML contract; they do not contain application state, task transport, or product logic.

```js
import { a3sAI } from "@a3s-lab/ui/ai";
import manifest from "@a3s-lab/ui/components.json" with { type: "json" };

a3sAI.scan(document);
console.log(manifest.components.length); // 116
```

React and Vue are optional peer dependencies. Install only the framework used by the host application, then import components from `@a3s-lab/ui/react` or `@a3s-lab/ui/vue`.

See [Integration](/integration) for native HTML, React, Vue, manifest, selector, snapshot, and deterministic test examples.

## Icons

Icons are deliberately not bundled. Documentation examples use inline Lucide-compatible SVG, but applications may use any icon system. Icon-only controls always need an accessible name.
